--- a/app/templates/admin/configuracion.html
+++ b/app/templates/admin/configuracion.html
@@ -49,7 +49,7 @@
             <div class="bg-admin-dark px-6 py-4 border-b border-gray-600">
                 <h3 class="text-lg font-semibold text-admin-accent capitalize">
                     {% if categoria == 'general' %}
-                    <i class="fas fa-cog mr-2"></i>Información Generall
+                    <i class="fas fa-cog mr-2"></i>Información General
                     {% elif categoria == 'contacto' %}
                     <i class="fas fa-phone mr-2"></i>Información de Contacto
                     {% elif categoria == 'redes_sociales' %}
