--- a/app/templates/nosotros.html
+++ b/app/templates/nosotros.html
@@ -99,7 +99,7 @@
                              class="w-full h-48 object-cover transition-transform duration-300 group-hover:scale-105">
                         <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                         <div class="absolute bottom-4 left-4 text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
-                            <p class="font-semibold">Nuestro Taller</p>
+                            <p class="font-semibold">Nuestra Fabrica</p>
                         </div>
                     </div>
                     <div class="relative overflow-hidden rounded-xl shadow-lg group">
